# github-profile-screenshots

./: .dockerignore  .env.example  .gitignore  BIO_URL_FIX_SUMMARY.md  DOCKER_TEST_RESULTS.md  Dockerfile  README.md  cron-schedule.sh  docker-compose.yml  pyproject.toml
.claude/commands/: feature.md
.github/workflows/: daily-screenshot.yml  weekly-screenshot.yml
claude_plans/: fix-screenshot-repository-location.md  project-github-screenshot-updates.md
specs/: github-profile-screenshot-automation.md
src/: __init__.py  bio_updater.py  config.py  github_uploader.py  main.py  readme_updater.py  screenshot_capture.py  utils.py
tests/: __init__.py  test_bio_updater.py  test_config.py  test_github_uploader.py  test_integration.py  test_readme_updater.py  test_screenshot_capture.py  test_utils.py
